# shinkai-side-executor/src/api/api_handlers.rs
@@ -1,17 +1,23 @@
-use std::collections::HashMap;
-
 use futures::StreamExt;
 use shinkai_vector_resources::{
-    embedding_generator::RemoteEmbeddingGenerator, model_type::EmbeddingModelType, vector_resource::VRKai,
+    embedding_generator::RemoteEmbeddingGenerator,
+    model_type::EmbeddingModelType,
+    vector_resource::{VRKai, VRPack},
 };
+use std::collections::HashMap;
 use warp::Buf;
 
-use crate::{api::APIError, file_stream_parser::FileStreamParser};
+use crate::{
+    api::APIError,
+    file_stream_parser::FileStreamParser,
+    models::dto::{ConvertFromVRPack, VRPackContent},
+};
 
 const PART_KEY_EMBEDDING_MODEL: &str = "embedding_model";
 const PART_KEY_EMBEDDING_GEN_URL: &str = "embedding_gen_url";
 const PART_KEY_EMBEDDING_GEN_KEY: &str = "embedding_gen_key";
 const PART_KEY_ENCODED_VRKAI: &str = "encoded_vrkai";
+const PART_KEY_ENCODED_VRPACK: &str = "encoded_vrpack";
 const PART_KEY_MAX_NODE_TEXT_SIZE: &str = "max_node_text_size";
 const PART_KEY_VRPACK_NAME: &str = "vrpack_name";
 
@@ -342,4 +348,55 @@ pub async fn vrpack_generate_from_vrkais_handler(
         encoded_vrpack,
         warp::http::StatusCode::OK,
     )))
+}
+
+pub async fn vrpack_view_contents_handler(
+    form: warp::multipart::FormData,
+) -> Result<Box<dyn warp::Reply + Send>, warp::Rejection> {
+    let mut encoded_vrpack = "".to_string();
+
+    let mut stream = Box::pin(form.filter_map(|part_result| async move {
+        if let Ok(part) = part_result {
+            println!("Received part: {:?}", part);
+
+            let part_name = part.name().to_string();
+
+            if part_name == PART_KEY_ENCODED_VRPACK {
+                let stream = part
+                    .stream()
+                    .map(|res| res.map(|mut buf| buf.copy_to_bytes(buf.remaining()).to_vec()));
+                return Some((part_name, stream));
+            }
+        }
+        None
+    }));
+
+    while let Some((part_name, mut part_stream)) = stream.next().await {
+        println!("Processing part: {:?}", part_name);
+
+        let mut part_data = Vec::new();
+        while let Some(Ok(node)) = part_stream.next().await {
+            part_data.extend(node);
+        }
+
+        if part_name == PART_KEY_ENCODED_VRPACK {
+            encoded_vrpack = String::from_utf8(part_data).unwrap_or_default();
+        }
+    }
+
+    match VRPack::from_base64(&encoded_vrpack) {
+        Ok(vrpack) => {
+            let content =
+                VRPackContent::convert_from(vrpack).map_err(|e| warp::reject::custom(APIError::from(e.to_string())))?;
+
+            Ok(Box::new(warp::reply::with_status(
+                warp::reply::json(&content),
+                warp::http::StatusCode::OK,
+            )))
+        }
+        Err(_) => Ok(Box::new(warp::reply::with_status(
+            warp::reply::json(&"Input is not a valid VRPack."),
+            warp::http::StatusCode::BAD_REQUEST,
+        ))),
+    }
 }
