# shinkai-side-executor/src/models/dto/mod.rs
@@ -1,0 +1,3 @@
+pub mod vrpack_content;
+
+pub use vrpack_content::*;
